# bevaders

./: .pre-commit-config.yaml  Cargo.toml  README.md
assets/: game_of_life.wgsl  webcam_kaleidoscope.wgsl
examples/: game_of_life.rs  webcam_kaleidoscope.rs
src/: common.wgsl  lib.rs  webcam.rs
